# universal-cslib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: universal-cslib-config.cmake
src/: CMakeLists.txt
universal-cslib-reflection/: CMakeLists.txt
universal-cslib-reflection/src/: CMakeLists.txt
universal-cslib-reflection/src/ucsl-reflection/: opaque.h  operators.h
universal-cslib-reflection/src/ucsl-reflection/accessors/: binary.h  types.h
universal-cslib-reflection/src/ucsl-reflection/accessors2/: accessors.h
universal-cslib-reflection/src/ucsl-reflection/algorithms/: copy.h
universal-cslib-reflection/src/ucsl-reflection/backends/: binary.h
universal-cslib-reflection/src/ucsl-reflection/game-interfaces/ingame/: miller.h  rangers.h  wars.h
universal-cslib-reflection/src/ucsl-reflection/game-interfaces/standalone/: game-interface.h  reflection-db.h  rflsystem.h  schema.h
universal-cslib-reflection/src/ucsl-reflection/providers/: rflclass.h  simplerfl.h  types.h
universal-cslib-reflection/src/ucsl-reflection/reflections/: basic-types.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/aism/: v0.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/asm/: v103-miller.h  v103-rangers.h  v103.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/converse-meta/: v2.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/converse-project/: v4.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/converse-text/: v6.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/density-setting/: v11.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/effdb/: v100.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/fxcol/: v1.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/kd-tree/: v1.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/map/: v1.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/master-level/: v0.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/material/: contexts.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/navmeshconfig/: v1.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/nxs/: v1.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/object-world/: v2.h  v3.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/okern/: v1.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/path/: v1.h  v200.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/pba/: v1.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/pcmodel/: v2.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/pointcloud/: v2.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/rfl/: v1.h  v2.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/scfnt/: v1000.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/sobj/: v1.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/svcol/: v1.h
universal-cslib-reflection/src/ucsl-reflection/reflections/resources/swif/: v5.h  v6.h
universal-cslib-reflection/src/ucsl-reflection/traversals/: fold.h  range.h  rflclass.h  simplerfl.h  traversal.h  types.h
universal-cslib-reflection/src/ucsl-reflection/util/: memory.h  result.h
universal-cslib-reflection/tests/: CMakeLists.txt  simplerfl.cpp
universal-cslib-reflection/tests/ucsl-reflection/traversals/: fold.cpp
(+68 files in other folders)
